# root_boot

./: Cargo.toml  README.md  install.sh  uninstall.sh
src/: main.rs
