[package]
name = "root_boot"
version = "0.1.1"
edition = "2024"
description = "A CLI tool that allows you to restart your PC and then auto-boot into a selected device."
license = "MIT"
repository = "https://github.com/execRooted/root_boot"

[[bin]]
name = "root_boot"
path = "src/main.rs"

[[bin]]
name = "rb"
path = "src/main.rs"

[dependencies]
colored = "2.0"
dialoguer = "0.10"
libc = "0.2"

